--- a/TbdModule/src/main/res/layout/fragment_second.xml
+++ b/TbdModule/src/main/res/layout/fragment_second.xml
@@ -32,6 +32,7 @@ Section RCB
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
+            android:src="@drawable/roombooked"
             android:contentDescription="@string/room_1b"
             android:background="@color/colorPrimary"
             android:scaleType="fitCenter"
@@ -68,6 +69,7 @@ Section RCB
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:clickable="false"
+            android:src="@drawable/roomvacant"
             android:contentDescription="@string/room_2b"
             android:background="@color/darkGreen"
             android:layout_gravity="center"
@@ -106,6 +108,7 @@ Section RCB
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:clickable="false"
+            android:src="@drawable/roomvacant"
             android:contentDescription="@string/room_3b"
             android:background="@color/darkGreen"
             android:layout_gravity="center"
@@ -143,6 +146,7 @@ Section RCB
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:clickable="false"
+            android:src="@drawable/roomvacant"
             android:contentDescription="@string/room_4b"
             android:background="@color/darkGreen"
             android:layout_gravity="center"
