--- a/TbdModule/src/main/res/layout/fragment_third.xml
+++ b/TbdModule/src/main/res/layout/fragment_third.xml
@@ -31,6 +31,7 @@ Section RCB
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
+            android:src="@drawable/roombooked"
             android:contentDescription="@string/room_1c"
             android:background="@color/colorPrimary"
             android:scaleType="fitCenter"
@@ -67,6 +68,7 @@ Section RCB
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:clickable="false"
+            android:src="@drawable/roomvacant"
             android:contentDescription="@string/room_2c"
             android:background="@color/darkGreen"
             android:layout_gravity="center"
@@ -105,6 +107,7 @@ Section RCB
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:clickable="false"
+            android:src="@drawable/roomvacant"
             android:contentDescription="@string/room_3c"
             android:background="@color/darkGreen"
             android:layout_gravity="center"
@@ -143,6 +146,7 @@ Section RCB
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:clickable="false"
+            android:src="@drawable/roomvacant"
             android:contentDescription="@string/room_4c"
             android:background="@color/darkGreen"
             android:layout_gravity="center"
