--- a/TbdModule/src/main/res/values/themes.xml
+++ b/TbdModule/src/main/res/values/themes.xml
@@ -16,8 +16,14 @@
         <item name="colorControlActivated">@color/black</item>
         <item name="colorSwitchThumbNormal">@color/white</item>
         <item name="android:colorForeground">@color/baige</item>
+    </style>
 
-
+    <!-- Light Mode -->
+    <style name="Screen">
+        <item name="android:background">@color/white</item>
+    </style>
+    <style name="Text">
+        <item name="android:background">@color/black</item>
     </style>
 
     <style name="Theme.SmartLibraryStudyRoomManagementAndComfortSystem" parent="Base.Theme.SmartLibraryStudyRoomManagementAndComfortSystem" />
