--- a/TbdModule/src/main/res/layout/activity_login.xml
+++ b/TbdModule/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:gravity="center"
-    android:background="@color/teal_700"
+    android:background="@drawable/splash_background"
     android:orientation="vertical">
 
     <TextView
