--- a/TbdModule/src/main/res/layout/activity_registration.xml
+++ b/TbdModule/src/main/res/layout/activity_registration.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
-    android:background="@color/teal_700">
+    android:background="@drawable/splash_background">
 
     <TextView
         android:id="@+id/signUpTitle"
