removed hardcoding from xml files

--- a/TbdModule/src/main/res/layout/activity_login.xml
+++ b/TbdModule/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/LoginTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/login"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -21,7 +21,7 @@
         android:id="@+id/usernameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:background="#80FFFFFF"
         android:layout_marginBottom="12dp"
@@ -33,7 +33,7 @@
         android:id="@+id/passwordInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:background="#80FFFFFF"
         android:layout_marginBottom="12dp"
@@ -46,14 +46,14 @@
         android:id="@+id/rememberMeCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Remember me"
+        android:text="@string/remember_me"
         android:layout_marginBottom="16dp" />
 
     <Button
         android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="LOGIN"
+        android:text="@string/LOGIN"
         android:textColor="@android:color/white"
         android:backgroundTint="@android:color/black"
         android:layout_marginBottom="16dp"
@@ -63,7 +63,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OR"
+        android:text="@string/OR"
         android:textColor="@android:color/black"
         android:layout_marginBottom="16dp"
         android:textSize="16sp" />
@@ -73,7 +73,7 @@
         android:id="@+id/googleSignInButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sign in with Google"
+        android:text="@string/sign_in_with_google1"
         android:drawableStart="@drawable/ic_google"
         android:textColor="@android:color/black"
         android:background="#80FFFFFF"
@@ -85,7 +85,7 @@
         android:id="@+id/signUpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Don't have an account? Sign Up"
+        android:text="@string/don_t_have_an_account_sign_up1"
         android:textColor="@android:color/black"
         android:layout_marginTop="30dp"
         android:gravity="center"
