--- a/TbdModule/src/main/res/layout/fragment_feedback.xml
+++ b/TbdModule/src/main/res/layout/fragment_feedback.xml
@@ -26,21 +26,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Please Submit a Review!" />
+        android:text="@string/please_submit_a_review" />
 
     <EditText
         android:id="@+id/fullNameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="85dp"
-        android:hint="Your Name"
+        android:hint="@string/your_name"
         android:inputType="text" />
 
     <EditText
         android:id="@+id/phoneNumberInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Your Phone Number"
+        android:hint="@string/your_phone_number"
         android:inputType="phone"
         android:layout_marginTop="130dp" />
 
@@ -48,7 +48,7 @@
         android:id="@+id/EmailInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Your Email"
+        android:hint="@string/your_email"
         android:inputType="textEmailAddress"
         android:layout_marginTop="175dp" />
 
@@ -57,7 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="220dp"
-        android:hint="Your Comments"
+        android:hint="@string/your_comments"
         android:inputType="textMultiLine"
         android:gravity="top"
         android:minLines="3" />
@@ -66,7 +66,7 @@
         android:id="@+id/submitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit Review"
+        android:text="@string/submit_review"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="310dp" />
 
