--- a/TbdModule/src/main/res/layout/fragment_second.xml
+++ b/TbdModule/src/main/res/layout/fragment_second.xml
@@ -47,7 +47,7 @@ Section RCB
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="RoomB201"
+                android:text="@string/roomb201"
                 android:layout_gravity="center_horizontal" />
 
             <TextView
@@ -84,7 +84,7 @@ Section RCB
                 android:id="@+id/room2BText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="RoomB202"
+                android:text="@string/roomb202"
                 android:layout_gravity="center_horizontal" />
 
             <TextView
@@ -124,7 +124,7 @@ Section RCB
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="RoomB203"
+                android:text="@string/roomb203"
                 android:layout_gravity="center_horizontal" />
 
             <TextView
@@ -163,7 +163,7 @@ Section RCB
                 android:id="@+id/room4AText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="RoomB204"
+                android:text="@string/roomb204"
                 android:layout_gravity="center_horizontal" />
 
             <TextView
