--- a/TbdModule/src/main/res/layout/fragment_user_profile.xml
+++ b/TbdModule/src/main/res/layout/fragment_user_profile.xml
@@ -30,7 +30,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="profile Details"
+                        android:text="@string/profile_details"
                         android:textStyle="bold" />
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -41,7 +41,7 @@
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Your Name"
+                            android:hint="@string/your_name1"
                             android:imeOptions="actionNext"
                             android:textColorHint="@color/colorPrimary" />
 
@@ -55,7 +55,7 @@
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Email Address"
+                            android:hint="@string/email_address1"
                             android:imeOptions="actionNext"
                             android:inputType="textEmailAddress"
                             android:textColorHint="@color/colorPrimary" />
@@ -71,7 +71,7 @@
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="password"
+                            android:hint="@string/password2"
                             android:imeOptions="actionNext"
                             android:inputType="textPassword"
                             android:textColorHint="@color/colorPrimary" />
@@ -90,7 +90,7 @@
                         android:id="@+id/saveButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Save"
+                        android:text="@string/save"
                         android:layout_gravity="center_horizontal" />
 
 
