--- a/TbdModule/src/main/res/layout/activity_registration.xml
+++ b/TbdModule/src/main/res/layout/activity_registration.xml
@@ -42,6 +42,18 @@
         android:minHeight="48dp" />
 
     <EditText
+        android:id="@+id/phoneNumberInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Phone Number"
+        android:inputType="text|phone"
+        android:background="#80FFFFFF"
+        android:layout_marginBottom="12dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:minHeight="48dp" />
+
+    <EditText
         android:id="@+id/passwordInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
