--- a/TbdModule/src/main/res/layout/fragment_feedback.xml
+++ b/TbdModule/src/main/res/layout/fragment_feedback.xml
@@ -13,7 +13,7 @@
         style="?android:attr/ratingBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:isIndicator="true"
+        android:isIndicator="false"
         android:layout_marginTop="40dp"
         android:layout_gravity="center_horizontal"
         android:numStars="5"
