--- a/TbdModule/src/main/res/layout/fragment_settings.xml
+++ b/TbdModule/src/main/res/layout/fragment_settings.xml
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
-                android:text="App Setttings"
+                android:text="@string/app_setttings1"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"/>
@@ -82,7 +82,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:text="Night Mode"
+                        android:text="@string/night_mode1"
                         android:textColor="@color/black"
                         android:layout_toEndOf="@+id/tbd_night"/>
                     <androidx.appcompat.widget.SwitchCompat
@@ -143,7 +143,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:text="Landscape"
+                        android:text="@string/landscape2"
                         android:textColor="@color/black"
                         android:layout_toEndOf="@+id/tbd_landscape"/>
 
@@ -184,7 +184,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:text="Font Size"
+                            android:text="@string/font_size1"
                             android:textColor="@color/black"
                             android:layout_toEndOf="@+id/tbd_font"/>
 
@@ -214,7 +214,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:text="About Us"
+                            android:text="@string/about_us2"
                             android:textColor="@color/black"
                             android:layout_toEndOf="@+id/tbd_aboutus"
                             />
@@ -244,7 +244,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:text="Location "
+                            android:text="@string/location"
                             android:textColor="@color/black"
                             android:layout_toEndOf="@+id/tbd_location"/>
 
@@ -286,7 +286,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:text="Feedback"
+                        android:text="@string/feedback3"
                         android:textColor="@color/black"
                         android:layout_toEndOf="@+id/tbd_feedback"/>
 
