--- a/TbdModule/src/main/res/layout/activity_registration.xml
+++ b/TbdModule/src/main/res/layout/activity_registration.xml
@@ -11,7 +11,7 @@
         android:id="@+id/signUpTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
+        android:text="@string/sign_up"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -45,7 +45,7 @@
         android:id="@+id/phoneNumberInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Phone Number"
+        android:hint="@string/phone_number"
         android:inputType="text|phone"
         android:background="#80FFFFFF"
         android:layout_marginBottom="12dp"
