--- a/TbdModule/src/main/res/layout/fragment_home.xml
+++ b/TbdModule/src/main/res/layout/fragment_home.xml
@@ -74,6 +74,14 @@ Section RCB
             android:layout_gravity="center"
             android:scaleType="fitCenter" />
 
+        <TextView
+            android:id="@+id/room1BText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="@string/rooma202"
+            android:layout_gravity="center_horizontal" />
+
     </FrameLayout>
 
 
