-Added svg vector file and new vector assets. -Added new fragment links in the options menu -Added settings screen -Implementing Night Mode in settings screen. -Adding Vector assets and implementing notifications setting. -New Vector files added. -Font size functionality added in settings screen. -Completed settings screen design and starting Implementations -Implemented dial run time permission in settings screen. -Feedback in settings now takes us to feedback screen. -Back button implementation -Updated background colors in all screens for better screen flow. -Location runtime permission implemented. -Room settings implementation continued. -Modifying menu items layout. -Removed call option from settings screen.

--- a/TbdModule/src/main/res/values/colors.xml
+++ b/TbdModule/src/main/res/values/colors.xml
@@ -17,4 +17,7 @@
     <color name="baige">#EFCE7B</color>
     <color name="pink">#FF00B8</color>
     <color name="darkGreen">#05710A</color>
+    <color name="dark_background">#333333</color> <!-- Dark gray background -->
+
+
 </resources>
