--- a/TbdModule/src/main/res/values/themes.xml
+++ b/TbdModule/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.SmartLibraryStudyRoomManagementAndComfortSystem" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="popupMenuStyle">@style/CustomPopupMenu</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
@@ -26,6 +27,14 @@
     <style name="Text">
         <item name="android:background">@color/black</item>
     </style>
+    <!-- Menu -->
+    <style name="CustomPopupMenu" parent="Widget.Material3.PopupMenu">
+        <item name="android:popupBackground">@color/dark_background</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+
+
 
     <style name="Theme.SmartLibraryStudyRoomManagementAndComfortSystem" parent="Base.Theme.SmartLibraryStudyRoomManagementAndComfortSystem" />
 </resources>
